[package]
name = "relayed"
version = "1.2.11"
authors = []
description = "Relay a TCP socket to a machine behind a dynamic IP/firewall."
edition = "2018"

[dependencies]
env_logger = { version = "0.9", default-features = false, features = ["humantime"] }
futures = "0.3"
log = "0.4"
pin-utils = "0.1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.18", features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
