[package]
name = "relayed"
version = "1.2.11"
authors = []
description = "Relay a TCP socket to a machine behind a dynamic IP/firewall."
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
futures = "0.3"
log = "0.4"
pin-utils = "0.1"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
